<?xml version="1.0"?>
<package format="3">
  <name>mpc_controller</name>
  <version>0.1.0</version>
  <description>
    ROS 2 package for implementing a Model Predictive Controller (MPC) for robotic systems.
  </description>

  <maintainer email="alexmazurin0105@gmail.com">almaz0105</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- Dependencies -->
  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>Eigen3</depend>

  <test_depend>ament_cmake_test</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
