<?xml version="1.0"?>
<package format="3">
  <name>simple_planner</name>
  <version>0.1.0</version>
  <description>The simple_planner package</description>
  <maintainer email="aminin@todo.todo">aminin</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>sensor_msgs</depend>

  <export>
  </export>
</package>
